--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,17 +15,14 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer base {
+  input, textarea {
+    @apply border border-gray-300 rounded-md p-1 text-xs;
+  }
+  h2 {
+    @apply text-2xl font-medium;
+  }
 }
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
