--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,10 @@
     @apply border border-gray-300 rounded-md p-1 text-xs;
   }
   h2 {
-    @apply text-2xl font-medium;
+    @apply text-3xl font-medium;
+  }
+  label {
+    @apply text-sm;
   }
 }
 @layer utilities {
